# axa-fr-oidc

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci-quality.yml  ci-tests.yml  publish.yml
docs/: client-secret-auth-methods.md  proxy-configuration.md
src/axa_fr_oidc/: __init__.py  client.py  constants.py  validator.py
src/axa_fr_oidc/authorization/: __init__.py  generic_authorization.py  jwt_authorization.py
src/axa_fr_oidc/http_service/: __init__.py  http_service.py
src/axa_fr_oidc/memory_cache/: __init__.py  memory_cache.py
src/axa_fr_oidc/oidc/: __init__.py  oidc_authentication.py  openid_connect.py
tests/: conftest.py  dpop_fixtures.py  test_authentication.py  test_authorization.py  test_client.py  test_http_service.py  test_memory_cache.py  test_openidconnect.py  test_validator.py
